--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brahmanbaria</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <h1>My love is <b>Brahmanbaria</b></h1>
 <h2>mai is nai dfhge adlfhe asha r afhehafe </h2>
 <h4>shaka wea dktha gdk ghel </h4>
 <p>BrahmanbariaBrahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria</p>
+
 <body>
     
 </body>
