--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<h1>My love is <b>Brahmanbaria</b></h1>
-<h2>mai is nai dfhge adlfhe asha r afhehafe </h2>
-<h4>shaka wea dktha gdk ghel </h4>
-<p>BrahmanbariaBrahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria</p>
+
 
 <body>
-    
+   <img src="59267371_825035034545755_1378929839137882112_n.jpg" 
+    <h1>My love is <b>Brahmanbaria</b></h1>
+    <h2>mai is nai dfhge adlfhe asha r afhehafe </h2>
+<h4>shaka wea dktha gdk ghel </h4>
+<p>BrahmanbariaBrahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria</p>
+<img src="59390882_825034024545856_5419605612033998848_n.jpg"
+
 </body>
 </html>
