--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <h4>shaka wea dktha gdk ghel </h4>
 <p>BrahmanbariaBrahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria Brahmanbaria</p>
 <img src="59390882_825034024545856_5419605612033998848_n.jpg"
-
+ <img src="268816545_984865825460857_5879250906571547289_n.jpg"
 </body>
 </html>
